force-app/main/default/objects/Remarketing_Config__c/Remarketing_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Remarketing Config</label>
</CustomObject>