force-app/main/default/objects/Remarketing_Config__c/fields/Lead_Called_X_times__c.field-meta.xml
<CustomField>
    <fullName>Lead_Called_X_times__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Called X times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>