force-app/main/default/objects/Remarketing_Config__c/fields/Lead_Overdue_Day__c.field-meta.xml
<CustomField>
    <fullName>Lead_Overdue_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Overdue Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>